<resources>
    <string name="app_name">CommitsFromNetwork</string>
    <string name="label_github_user">Github user (owner): </string>
    <string name="label_repo_name">Repository name (repo): </string>
    <string name="github_user">trubin23</string>
    <string name="repo_name">notes-app</string>
    <string name="btn_load_text">request</string>

    <string name="commit_sha">Sha: </string>
    <string name="commit_message">Message: </string>
    <string name="commit_date">Date: </string>

</resources>
